fix MPS-28870 Log is blown up with stacktraces during mps rebuild on Windows